{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "00221fdc-54d4-459d-baa2-8c9f14cdc220",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "866d7592-bf76-4280-ae3e-cf38fe6599d0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "307ebc8d-7cfa-4eaf-b39f-5a0d7a8f6e31",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ac5f174e-3b31-4fc8-b0ff-76f913432771",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "23d3a775-f679-4580-b7a5-0b635aa12adf",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "777a6181-8f9e-4fab-b2e7-1e699729f284",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9568c711-1eb0-458b-938e-c82efe0bba99",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Combat",
            "id": "7c0b06c1-f547-45d4-80ca-2cda9a8165be",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "5f47c77a-6cbf-47b8-8b03-94f950552a75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8573637e-3465-4f6c-a523-0d4f95498d24",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}